Fixed css on mobile

--- a/blog/resources/scss/post-list.scss
+++ b/blog/resources/scss/post-list.scss
@@ -1,7 +1,7 @@
 .post-list {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(315px, 1fr));
   grid-auto-rows: 20px;
   padding: 0 1.5rem;
   @include media-breakpoint-up(md) {
